--- a/navigation.css
+++ b/navigation.css
@@ -1,10 +1,10 @@
-
 .navbar {
     list-style-type: none;
     margin: 0;
     padding: 0; 
     overflow: hidden;
-    background-color: #943;
+    background-color: #6b5b95; 
+
 }
 .navbar li{
     float: left;
@@ -17,6 +17,6 @@ padding: 14px 16px;
 text-decoration: none;
 }
 .navbar li a:hover{
-    background-color: #661; 
+    background-color:#878f99; 
 }
 .navbar {position: fixed; top: 0; width: 100%;}
