--- a/navigation.css
+++ b/navigation.css
@@ -1,7 +1,7 @@
 .navbar {
-    list-style-type: square;
-    margin: 0;
-    padding: 0; 
+    list-style-type: none;
+    margin: 5;
+    padding: 5; 
     overflow: hidden;
     background-color: #6b5b95; 
 
