--- a/index.css
+++ b/index.css
@@ -4,3 +4,10 @@
   margin-right: auto;
   width: 30%;
 }
+.p1 {
+  font-family:"Lucida Console", "Courier New", monospace;
+}
+
+.p2 {
+  font-family:"Lucida Console", "Courier New", monospace;
+}
