--- a/index.css
+++ b/index.css
@@ -10,10 +10,6 @@ img {
   border: 30px double lavender;
 }
 
-.h1 {
-  font: garamond;
-}
-
-.p2 {
-  font-family:"Lucida Console", "Courier New", monospace;
-}
+h1 {
+  font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+ }
