--- a/habitat.css
+++ b/habitat.css
@@ -4,7 +4,7 @@
 
 .flex-rat {
     flex: 1;
-    border: 4px solid Crayola's Periwinkle; 
+    border: 5px solid #C8CFE7; 
 }  
 
 .flex-child:first-rat {
