--- a/habitat.css
+++ b/habitat.css
@@ -8,7 +8,7 @@
      align-items:center; 
     justify-content:center; 
     flex: 1;
-    border: 5px solid pink; 
+    border: 5px solid #ffdae0; 
 }  
 
 .flex-child:first-rat {
