--- a/index.css
+++ b/index.css
@@ -17,6 +17,6 @@ h1 {
 h3 {
   font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
  }
-p2 {
+h4 {
   font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
  }
