--- a/habitat.css
+++ b/habitat.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items:center; 
     justify-content:center; 
+     background-color: white; 
 }
 
 .flex-rat {
@@ -9,10 +10,12 @@
     justify-content:center; 
     flex: 1;
     border: 5px solid #ffdae0; 
+       background-color: white; 
 }  
 
 .flex-child:first-rat {
       align-items:center; 
     justify-content:center; 
     margin-right: 20px;
+       background-color: white; 
 } 
