--- a/habitat.css
+++ b/habitat.css
@@ -19,3 +19,12 @@
     margin-right: 20px;
        background-color:  #FFFEF7; 
 } 
+
+h1 {
+      font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+    
+} 
+
+p1 {
+      font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+    } 
