--- a/facts.css
+++ b/facts.css
@@ -1,30 +1,21 @@
-.unordered {
-	  list-style-type: square;
-	  line-height: 170%;
-	} 
-	.nested-ul {
-	  list-style-type: circle; 
+.list-image {
+	list-style: none;
+	padding-left: 0;
 	}
-	.unordered {
-	background: #CD5C5C;
-	padding: 20px;
-	width: 30%;
-	font-family: Arial, Helvetica, sans-serif;
+	.list-image li {
+	position: relative;
+	padding-left: 30px;
+	line-height: 170%;
 	}
-
-	.unordered li {
-	background: #D288FF;
-	margin: 5px;
-	}
-	
-	.nested-ul li {
-	background: #EECCFF;
-	margin: 5px;
-	}
-	.ordered {
-	background: #FD8B00;
-	padding: 20px;
-	width: 20%;
-	font-family: 'Brush Script MT', cursive;
-	font-size: 1.3em;
+	.list-image li:before {
+	  content: '';
+	width: 20px;
+	height: 20px;
+	position: absolute;
+	background-image: url('milky-way.png');
+	background-size: cover;
+	background-position: center;
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
 	}
