--- a/facts.css
+++ b/facts.css
@@ -12,7 +12,7 @@
 	width: 20px;
 	height: 20px;
 	position: absolute;
-	background-image: url('milky-way.png');
+	background-image: url('animals.png');
 	background-size: cover;
 	background-position: center;
 	left: 0;
