--- a/facts.css
+++ b/facts.css
@@ -19,3 +19,25 @@
 	top: 50%;
 	transform: translateY(-50%);
 	}
+
+.flex-container {
+    display: flex;
+    align-items:center; 
+    justify-content:center; 
+     background-color: #FFFEF7 ; 
+}
+
+.flex-rat {
+     align-items:center; 
+    justify-content:center; 
+    flex: 1;
+    border: 5px solid #ffdae0; 
+       background-color:  #FFFEF7 ; 
+}  
+
+.flex-child:first-rat {
+      align-items:center; 
+    justify-content:center; 
+    margin-right: 20px;
+       background-color:  #FFFEF7; 
+} 
