--- a/facts.css
+++ b/facts.css
@@ -22,22 +22,20 @@
 
 .flex-container {
     display: flex;
-    align-items:center; 
-    justify-content:center; 
+    align-items:space-evenly; 
+    justify-content: space-evenly; 
      background-color: #FFFEF7 ; 
 }
 
 .flex-rat one {
-     align-items:center; 
-    justify-content:center; 
+    
     flex: 1;
     border: 5px solid #ffdae0; 
        background-color: #fadbde; 
 }  
 
 .flex-rat two {
-      align-items:flex-end; 
-    justify-content:flex-end; 
+      
     margin-right: 20px;
        background-color: #fadbde; 
 } 
