--- a/facts.css
+++ b/facts.css
@@ -24,7 +24,7 @@
     display: flex;
     align-items:space-evenly; 
     justify-content: space-evenly; 
-     background-color: #FFFEF7 ; 
+     background-color:space-evenly; 
 }
 
 .flex-rat one {
