--- a/habitat.css
+++ b/habitat.css
@@ -5,7 +5,7 @@
      background-color: #FFFEF7 ; 
 }
 
-.flex-rat {
+.flex-rat one {
      align-items:center; 
     justify-content:center; 
     flex: 1;
@@ -13,7 +13,7 @@
        background-color:  #FFFEF7 ; 
 }  
 
-.flex-child:first-rat {
+.flex- rat two {
       align-items:center; 
     justify-content:center; 
     margin-right: 20px;
