--- a/habitat.css
+++ b/habitat.css
@@ -10,7 +10,7 @@
     justify-content:center; 
     flex: 1;
     border: 5px solid #ffdae0; 
-       background-color:  #FFFEF7 ; 
+       background-color: #FDF2E1; 
 }  
 
 .flex- rat two {
@@ -18,7 +18,7 @@
     justify-content:center; 
      border: 5px solid #ffdae0; 
     margin-right: 20px;
-       background-color:  #FFFEF7; 
+       background-color: #FDF2E1; 
 } 
 
 h1 {
