--- a/habitat.css
+++ b/habitat.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items:space-evenly; 
     justify-content:space-evenly; 
-     background-color: #FFFEF7 ; 
+     background-color: #ffd1dc; 
 }
 
 .flex-rat one {
