--- a/habitat.css
+++ b/habitat.css
@@ -25,3 +25,10 @@ h1 {
 p1 {
       font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
     } 
+
+p4 {
+      font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+    } 
+p5 {
+      font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+    } 
