--- a/species.css
+++ b/species.css
@@ -15,3 +15,9 @@
     margin-right: 20px;
        background-color: #fadbde; 
 } 
+
+p1 {
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+    
+} 
+
