--- a/specietwo.css
+++ b/specietwo.css
@@ -1,4 +1,5 @@
  p1 {
    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+  background-color: white; 
    
    }  
