--- a/facts.css
+++ b/facts.css
@@ -6,6 +6,7 @@
 	position: relative;
 	padding-left: 30px;
 	line-height: 170%;
+         font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
 	}
 	.list-image li:before {
 	  content: '';
@@ -18,6 +19,8 @@
 	left: 0;
 	top: 50%;
 	transform: translateY(-50%);
+		  font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+
 	}
 
 .flex-container {
