--- a/specieone.css
+++ b/specieone.css
@@ -1,12 +1,14 @@
 
 .flex-container {
     display: flex;
-    align-items: space-between; 
-    justify-content:space-between; 
+   align-items:space-evenly; 
+    justify-content:space-evenly; 
      background-color: #FFFEF7 ; 
 }
 
 .flex-rat {
+    align-items:space-evenly; 
+    justify-content:space-evenly; 
     flex: 1;
     border: 5px solid #ffdae0; 
        background-color:  #FFFEF7 ; 
