--- a/specieone.css
+++ b/specieone.css
@@ -20,3 +20,7 @@
     margin-right: 20px;
        background-color:  #FFFEF7; 
 } 
+
+p1 {
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+}
