--- a/cssfiles/facts.css
+++ b/cssfiles/facts.css
@@ -17,7 +17,7 @@
 	width: 20px;
 	height: 20px;
 	position: absolute;
-	background-image: url('animals.png');
+	background-image: url('pictures/animals.png');
 	background-size: cover;
 	background-position: center;
 	left: 0;
