--- a/cssfiles/index.css
+++ b/cssfiles/index.css
@@ -14,6 +14,10 @@ img {
   border: 30px double thistle;
 }
 
+@media only screen and (max-width: 768px) {
+  {
+    width: 100%;
+  }
 h1 {
   font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
  }
