--- a/cssfiles/specietwo.css
+++ b/cssfiles/specietwo.css
@@ -3,7 +3,7 @@ body {
 	background-color: lavender;
 } 
 p1 {
- font-size: 1 rem; 
+ font-size: 1 em; 
    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
   background-color: white; 
    
@@ -15,7 +15,13 @@ img {
 
 @media ( min-width: 600px) {
 p1 {
-	font-size: 1.25rem; 
+	font-size: 1.25 rem; 
+	}
+	
+}
+@media ( min-width: 800px) {
+p1 {
+	font-size: 1.5 rem; 
 	}
 	
 }
