--- a/cssfiles/specietwo.css
+++ b/cssfiles/specietwo.css
@@ -16,25 +16,26 @@ img {
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media (min-width: 600px) {
  p1 {
-	 }
+	font-size:24px; 
+	}
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media  (min-width: 768px) {
   p1 {
-	 }
+	font-size:20px;  }
 } 
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media  (min-width: 992px) {
   p1 {
-	 }
+	font-size:18px;  }
 } 
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media (min-width: 1200px) {
  p1 {
-	 }
+	font-size:16px;  }
 }
 
 
